  - Minor string changes.
  - Improvements to error handling in the new versions tab.
  - Write a confirmation form for uninstalling a module that displays the UninstallPreMessage or uses a default.
  - Now don't allow disabling / uninstalling myself.
  - Don't hide the upgrades tab when there are no upgrades, but show the number of upgrades in the tab title instead.


Version 2.1.6 - Spanish Wells
----------------------------------
Core - General
  - Now attempt to detect if a template name passed into CmsModule::GetTemplateResource() is already a resource string.
  - endswith is now an accepted function in Smarty templates (fixes typo in security policy).
  - Fixes for CmsNlsOperations when using a language detector.
  - Fixes warnings in useroperations.
  - Fixes problem with cms_selflink dir='up' since 2013.
  - Modifies the OneEleven theme to set the meta referrer attribute for security purposes.
  - Modifies the functionality of the CSRF tokens to be more secure (only set the cookie in one location, only set the session variable from the cookie).
  - Increase Admin users list limit.
  - Reduce time limit for daily version check to 3 seconds.
  - cleanValues in Admin log and List Content.
  - Minor fix to the relative_time plugin.
  - Admin menu item URLs can now be built from the remaining members of the object, if not specified.
  - {content_image} and {content_module} now preserve order properly and support the priority attribute.
  
  - #11198 - Fixes problem with cms_selflink with aliases that starts with a numeric sign.

Content Manager v1.1.4
  - Fix bulk set-non-cachable functionality.
  - Fix a bug wrt content blocks and the adding flag.

Installation Assistant v1.0.4
  - Adds recommended check for ZipArchive.
  - Improves method of determining a temp directory.

ModuleManager v2.0.5
  - Improves functionality if ModuleRepository is not available.

News v2.50.6
  - Minor fix to editing news articles from the Admin interface.

