@@ -23,10 +23,14 @@ $(document).ready(function(){
     {wizard_form_start}
     {$label='install'|tr}
 
+        {if $nofiles}
+          <div class="message yellow">{'step2_nofiles'|tr}</div>
+	{/if}
+
         {if !isset($cmsms_info)}
           <div class="message yellow">{'step2_nocmsms'|tr}</div>
         {else}
-	    {* its an upgrade *}
+	    {* its an upgrade or freshen *}
             {if isset($cmsms_info.error_status)}
                 {if $cmsms_info.error_status == 'too_old'}
                     <div class="message red">{'step2_cmsmsfoundnoupgrade'|tr}</div>
