@@ -65,7 +65,7 @@
                 <label>{'prompt_dbpass'|tr}</label>
             </div>
             <div class="eight-col">
-                <input class="form-field required full-width" type="password" name="dbpass" value="" autocomplete="off" required="required"/>
+                <input class="form-field required full-width" type="password" name="dbpass" value="" autocomplete="false" required="required"/>
                 <div class="corner red">
                     <i class="icon-asterisk"></i>
                 </div>
