@@ -16,7 +16,7 @@ final class session implements \ArrayAccess
           $session_key = substr(md5(__DIR__),0,10);
           @session_name('CMSIC'.$session_key);
           @session_cache_limiter('nocache');
-	  $res = null;
+          $res = null;
           if( !@session_id() ) $res = @session_start();
           if( !$res ) throw new \RuntimeException('Problem starting the session (system configuration problem?)');
           self::$_session_id = session_id();
@@ -52,6 +52,12 @@ final class session implements \ArrayAccess
   {
     if( !self::$_instance ) self::$_instance = new session;
     return self::$_instance;
+  }
+
+  public function reset()
+  {
+      self::clear();
+      $this->_expand();
   }
 
   public function offsetExists($key)
